--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,23 @@ body {
     background-color: #121214;
 }
 
+header {
+    padding: 32px ;
+}
+
+header div {
+    width: 120px;
+    margin: auto;
+    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    border-radius: 50%;
+    display: flex;
+    padding: 5px;
+}
+
+header div img {
+    width: 100%;
+    border-radius: 50%;
+}
 
 main * {
     border: 1px solid red;
@@ -28,13 +45,12 @@ main * {
 
 main {
     max-width: 580px;
-    margin: auto;
+    width: 90%;
+    margin: 40px auto;
 
     display: flex;
     flex-direction: column;
-    gap: 23px;
-
-    margin-top: 32px;
+    gap: 24px;
 }
 
 section {
@@ -75,4 +91,5 @@ section ul {
 .channel-list img {
     width: 75px;
     border-radius: 50%;
+    border: 1px solid #443E54;
 }
