--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,8 @@ body {
 }
 
 header {
-    padding: 32px;
+    padding-top: 32px;
+    height: calc(120px + 32px);
 }
 
 header div {
@@ -42,10 +43,6 @@ header div:hover {
 header div img {
     width: 100%;
     border-radius: 50%;
-}
-
-main * {
-    border: 1px solid red;
 }
 
 main {
@@ -105,4 +102,50 @@ section ul li:hover {
     width: 75px;
     border-radius: 50%;
     border: 1px solid #443E54;
+}
+
+/* Animation */
+
+header div {
+    animation: fromTop 1s;
+}
+
+main section {
+    animation: fromBottom 1s backwards;
+}
+
+main section:nth-child(1) {
+    animation-delay: 0.5s;
+}
+
+main section:nth-child(2) {
+    animation-delay: .9s;
+}
+
+main section:nth-child(3) {
+    animation-delay: 1.3s;
+}
+
+@keyframes fromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+
+@keyframes fromBottom {
+    from {
+        opacity: 0;
+        transform: translateX(-30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translatex(0)
+    }
 }
